fix🐛(html, css): make the scrollbar hiding more consistent

--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@ body {
     max-width: 600px;
     min-width: 400px;
     width: 100%;
-    height: 450px;
+    height: 490px;
     box-sizing: border-box;
     border-radius: 3px;
     /* padding-left: 20px;
